--- a/module_2/data_vis_experience.ipynb
+++ b/module_2/data_vis_experience.ipynb
@@ -31,8 +31,199 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "9f7530eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "415bdf15",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Math', 'Physics', 'CS', 'Math', 'Math', 'Physics', 'CS', 'CS',\n",
+       "       'Math', 'Engineering', 'Math', 'Math', 'Math', 'Math', 'Physics',\n",
+       "       'CS', 'Physics', 'Physics', 'Physics', 'Math', 'Engineering', 'CS',\n",
+       "       'Engineering', 'Physics', 'Physics', 'Engineering', 'Engineering',\n",
+       "       'Engineering', 'Physics', 'Physics', 'CS', 'CS', 'Physics',\n",
+       "       'Engineering', 'Engineering', 'CS', 'Physics', 'CS', 'CS', 'Math',\n",
+       "       'Math', 'Math', 'Engineering', 'Physics', 'Physics', 'Physics',\n",
+       "       'Physics', 'Math', 'Engineering', 'Engineering', 'Math',\n",
+       "       'Engineering', 'Math', 'Physics', 'Math', 'Physics', 'Physics',\n",
+       "       'CS', 'Math', 'CS', 'Math', 'Math', 'CS', 'CS', 'Math',\n",
+       "       'Engineering', 'Physics', 'CS', 'Physics', 'Engineering',\n",
+       "       'Engineering', 'Engineering', 'CS', 'Engineering', 'CS',\n",
+       "       'Engineering', 'Physics', 'Physics', 'Math', 'Physics', 'Math',\n",
+       "       'Physics', 'CS', 'Physics', 'Math', 'Math', 'Engineering', 'CS',\n",
+       "       'Physics', 'Engineering', 'Physics', 'Physics', 'Engineering',\n",
+       "       'Engineering', 'Engineering', 'Engineering', 'Engineering',\n",
+       "       'Physics', 'Engineering', 'CS', 'Math', 'Engineering',\n",
+       "       'Engineering', 'Physics', 'Engineering', 'Engineering',\n",
+       "       'Engineering', 'Physics', 'Engineering', 'Math', 'Physics', 'Math',\n",
+       "       'Physics', 'Engineering', 'Math', 'Physics', 'CS', 'Engineering',\n",
+       "       'Physics', 'CS', 'Physics', 'CS', 'Engineering', 'Math', 'CS',\n",
+       "       'Physics', 'Engineering', 'CS', 'Physics', 'Physics', 'Physics',\n",
+       "       'CS', 'CS', 'CS', 'Math', 'CS', 'CS', 'CS', 'Math', 'CS',\n",
+       "       'Physics', 'CS', 'Physics', 'Physics', 'Physics', 'Math', 'Math',\n",
+       "       'Math', 'CS', 'Physics', 'Math', 'Math', 'CS', 'Math', 'CS',\n",
+       "       'Engineering', 'Math', 'Engineering', 'CS', 'Physics', 'Math',\n",
+       "       'CS', 'Physics', 'Physics', 'Engineering', 'CS', 'Physics', 'Math',\n",
+       "       'Math', 'Engineering', 'Physics', 'CS', 'Math', 'Physics',\n",
+       "       'Physics', 'Engineering', 'Math', 'Math', 'CS', 'Math', 'CS',\n",
+       "       'Math', 'Engineering', 'Math', 'CS', 'CS', 'Engineering', 'Math',\n",
+       "       'Math', 'Engineering', 'Math', 'Math', 'CS', 'Math', 'Math',\n",
+       "       'Engineering', 'Engineering', 'Physics', 'CS', 'Math', 'Math',\n",
+       "       'Physics', 'Math', 'CS', 'Physics', 'CS', 'Physics', 'Physics',\n",
+       "       'Engineering', 'CS', 'Math', 'Math', 'CS', 'Math', 'Math', 'CS',\n",
+       "       'Physics', 'CS', 'Physics', 'Math', 'Math', 'Math', 'Engineering',\n",
+       "       'Physics', 'Engineering', 'Engineering', 'CS', 'Engineering', 'CS',\n",
+       "       'CS', 'Engineering', 'Physics', 'Physics', 'Physics', 'Physics',\n",
+       "       'Physics', 'Engineering', 'Engineering', 'Math', 'Physics',\n",
+       "       'Engineering', 'Math', 'Physics', 'CS', 'Math', 'Engineering',\n",
+       "       'CS', 'CS', 'CS', 'Math', 'Engineering', 'CS', 'Physics', 'CS',\n",
+       "       'CS', 'Math', 'Math', 'Engineering', 'Physics', 'Math', 'CS',\n",
+       "       'Engineering', 'CS', 'CS', 'Math', 'Engineering', 'Physics',\n",
+       "       'Physics', 'Math', 'Math', 'Engineering', 'Physics', 'Physics',\n",
+       "       'Physics', 'CS', 'Physics', 'CS', 'Engineering', 'CS',\n",
+       "       'Engineering', 'Physics', 'Physics', 'Engineering', 'Math',\n",
+       "       'Engineering', 'Math', 'CS', 'CS', 'CS', 'Physics', 'CS', 'Math',\n",
+       "       'CS', 'Engineering', 'Engineering', 'Physics', 'Engineering',\n",
+       "       'Math', 'CS', 'Physics', 'CS', 'CS', 'Math', 'Engineering',\n",
+       "       'Engineering', 'CS', 'Physics', 'Engineering', 'Physics',\n",
+       "       'Engineering', 'Physics', 'Math', 'Physics', 'Math', 'Math',\n",
+       "       'Physics', 'Math', 'CS', 'Math', 'Engineering', 'Physics', 'CS',\n",
+       "       'Physics', 'Engineering', 'Engineering', 'Engineering', 'Math',\n",
+       "       'Math', 'Physics', 'Physics', 'CS', 'CS', 'Physics', 'Math',\n",
+       "       'Engineering', 'Physics', 'CS', 'Math', 'Physics', 'Physics',\n",
+       "       'Math', 'Physics', 'Math', 'Engineering', 'Math', 'Math', 'Math',\n",
+       "       'Physics', 'Physics', 'Math', 'Physics', 'CS', 'CS', 'Physics',\n",
+       "       'Physics', 'Math', 'Engineering', 'Physics', 'CS', 'Math',\n",
+       "       'Physics', 'CS', 'CS', 'Engineering', 'Math', 'Math',\n",
+       "       'Engineering', 'Engineering', 'Math', 'Math', 'Physics', 'Physics',\n",
+       "       'Engineering', 'Physics', 'CS', 'Physics', 'Physics', 'CS',\n",
+       "       'Engineering', 'CS', 'Physics', 'Engineering', 'Physics', 'CS',\n",
+       "       'CS', 'Physics', 'Math', 'Math', 'CS', 'CS', 'Math', 'Math',\n",
+       "       'Physics', 'Physics', 'Math', 'Physics', 'Physics', 'Engineering',\n",
+       "       'Physics', 'CS', 'Physics', 'Physics', 'Math', 'CS', 'Physics',\n",
+       "       'Physics', 'Engineering', 'Physics', 'Physics', 'Engineering',\n",
+       "       'Math', 'Physics', 'Engineering', 'CS', 'Math', 'CS', 'CS',\n",
+       "       'Engineering', 'Physics', 'Engineering', 'Engineering',\n",
+       "       'Engineering', 'Engineering', 'Math', 'Physics', 'CS', 'CS',\n",
+       "       'Physics', 'CS', 'Physics', 'CS', 'Engineering', 'CS', 'Physics',\n",
+       "       'Physics', 'Physics', 'Physics', 'Physics', 'Math', 'Math', 'CS',\n",
+       "       'Physics', 'CS', 'Physics', 'Physics', 'Math', 'Math',\n",
+       "       'Engineering', 'Math', 'Engineering', 'Engineering', 'Engineering',\n",
+       "       'Engineering', 'Engineering', 'CS', 'Math', 'Engineering',\n",
+       "       'Physics', 'Math', 'Math', 'Engineering', 'CS', 'Engineering',\n",
+       "       'CS', 'Physics', 'Math', 'Physics', 'CS', 'CS', 'Physics', 'CS',\n",
+       "       'Physics', 'Math', 'Physics', 'Math', 'Physics', 'CS', 'Physics',\n",
+       "       'CS', 'Physics', 'Physics', 'Engineering', 'CS', 'Engineering',\n",
+       "       'CS', 'Engineering', 'Math', 'Physics', 'CS', 'CS', 'Physics',\n",
+       "       'CS', 'CS', 'Engineering', 'CS', 'Math', 'Math', 'Physics', 'CS',\n",
+       "       'Physics', 'Math', 'CS', 'CS', 'Physics', 'Math', 'CS', 'Physics',\n",
+       "       'Math', 'Physics', 'Engineering', 'CS', 'Engineering', 'Math',\n",
+       "       'Engineering', 'Engineering', 'Math', 'Physics', 'Engineering',\n",
+       "       'Physics', 'Engineering', 'Physics', 'Math', 'Engineering', 'Math',\n",
+       "       'Engineering', 'Math', 'Math', 'Engineering', 'Engineering',\n",
+       "       'Engineering', 'CS', 'Physics', 'CS', 'CS', 'Math', 'Engineering',\n",
+       "       'Physics', 'Math', 'CS', 'Engineering', 'Math', 'Engineering',\n",
+       "       'Math', 'Engineering', 'CS', 'Physics', 'CS', 'Physics',\n",
+       "       'Engineering', 'Math', 'CS', 'Physics', 'CS', 'Physics', 'CS',\n",
+       "       'Physics', 'Physics', 'Engineering', 'Physics', 'Engineering',\n",
+       "       'Physics', 'Math', 'Math', 'Math', 'Physics', 'Engineering',\n",
+       "       'Engineering', 'Physics', 'Math', 'Math', 'Engineering', 'Math',\n",
+       "       'CS', 'Engineering', 'Math', 'Engineering', 'CS', 'Engineering',\n",
+       "       'Engineering', 'Engineering', 'Engineering', 'CS', 'Physics',\n",
+       "       'Engineering', 'Engineering', 'Math', 'Engineering', 'Math',\n",
+       "       'Physics', 'CS', 'CS', 'Physics', 'CS', 'Physics', 'Physics',\n",
+       "       'Physics', 'CS', 'Math', 'Physics', 'Engineering', 'CS', 'Physics',\n",
+       "       'Physics', 'Engineering', 'Math', 'Math', 'Math', 'Physics',\n",
+       "       'Physics', 'Physics', 'CS', 'Engineering', 'Physics',\n",
+       "       'Engineering', 'Engineering', 'Math', 'CS', 'Physics', 'Math',\n",
+       "       'Math', 'Physics', 'Engineering', 'Math', 'Engineering', 'CS',\n",
+       "       'Engineering', 'CS', 'Engineering', 'Math', 'Math', 'CS',\n",
+       "       'Physics', 'CS', 'CS', 'Engineering', 'Engineering', 'CS', 'Math',\n",
+       "       'Engineering', 'Physics', 'Engineering', 'Engineering', 'Physics',\n",
+       "       'CS', 'Physics', 'CS', 'CS', 'CS', 'Physics', 'CS', 'Math',\n",
+       "       'Physics', 'Math', 'CS', 'Engineering', 'CS', 'Math', 'Math',\n",
+       "       'Physics', 'Engineering', 'Physics', 'Math', 'CS', 'Engineering',\n",
+       "       'CS', 'CS', 'Engineering', 'Physics', 'CS', 'Math', 'CS',\n",
+       "       'Engineering', 'Engineering', 'Engineering', 'Physics', 'CS',\n",
+       "       'Physics', 'Physics', 'Engineering', 'Engineering', 'Physics',\n",
+       "       'CS', 'Math', 'Physics', 'CS', 'Engineering', 'Engineering', 'CS',\n",
+       "       'Math', 'Engineering', 'Engineering', 'Engineering', 'CS',\n",
+       "       'Physics', 'Engineering', 'Physics', 'Math', 'Engineering',\n",
+       "       'Engineering', 'Math', 'Engineering', 'Physics', 'CS', 'Physics',\n",
+       "       'CS', 'CS', 'Physics', 'Physics', 'Physics', 'Physics', 'Math',\n",
+       "       'Engineering', 'CS', 'Physics', 'Physics', 'Physics', 'Math',\n",
+       "       'Physics', 'Physics', 'Physics', 'Engineering', 'Math', 'Physics',\n",
+       "       'CS', 'CS', 'CS', 'Math', 'Math', 'CS', 'Physics', 'Math', 'CS',\n",
+       "       'CS', 'Physics', 'Engineering', 'Math', 'Physics', 'CS', 'CS',\n",
+       "       'Physics', 'Math', 'Engineering', 'Engineering', 'CS', 'Math',\n",
+       "       'Engineering', 'Math', 'Math', 'CS', 'Engineering', 'Physics',\n",
+       "       'CS', 'Engineering', 'Engineering', 'Engineering', 'Engineering',\n",
+       "       'Engineering', 'Math', 'CS', 'Math', 'Physics', 'Engineering',\n",
+       "       'CS', 'Engineering', 'CS', 'Math', 'CS', 'Physics', 'Physics',\n",
+       "       'CS', 'CS', 'CS', 'CS', 'Physics', 'Engineering', 'CS', 'CS',\n",
+       "       'Physics', 'Physics', 'Math', 'CS', 'Math', 'Physics', 'Physics',\n",
+       "       'Engineering', 'CS', 'Math', 'Physics', 'Physics', 'Math',\n",
+       "       'Engineering', 'Physics', 'CS', 'Physics', 'CS', 'Math', 'CS',\n",
+       "       'Math', 'CS', 'Math', 'CS', 'Engineering', 'CS', 'CS',\n",
+       "       'Engineering', 'Physics', 'Physics', 'CS', 'Engineering', 'CS',\n",
+       "       'Math', 'Math', 'CS', 'Physics', 'Physics', 'CS', 'CS', 'Math',\n",
+       "       'Physics', 'CS', 'Math', 'Physics', 'Engineering', 'Math',\n",
+       "       'Physics', 'Physics', 'Math', 'Engineering', 'Math', 'Physics',\n",
+       "       'CS', 'CS', 'Math', 'Physics', 'CS', 'Physics', 'Math', 'CS',\n",
+       "       'Physics', 'CS', 'Math', 'Physics', 'CS', 'Math', 'CS', 'CS',\n",
+       "       'Engineering', 'Engineering', 'Math', 'Engineering', 'Math',\n",
+       "       'Engineering', 'CS', 'Math', 'Math', 'CS', 'Math', 'Math',\n",
+       "       'Engineering', 'Math', 'Physics', 'CS', 'Engineering',\n",
+       "       'Engineering', 'Physics', 'CS', 'CS', 'Engineering', 'Math',\n",
+       "       'Engineering', 'CS', 'Physics', 'Engineering', 'CS', 'Engineering',\n",
+       "       'Math', 'Engineering', 'Engineering', 'CS', 'CS', 'CS',\n",
+       "       'Engineering', 'Math', 'Physics', 'Physics', 'CS', 'CS',\n",
+       "       'Engineering', 'Physics', 'CS', 'Math', 'Math', 'CS', 'CS',\n",
+       "       'Physics', 'Physics', 'Engineering', 'Physics', 'Math', 'Math',\n",
+       "       'CS', 'Physics', 'Engineering', 'Math', 'Math', 'Engineering',\n",
+       "       'Engineering', 'Math', 'Math', 'Engineering', 'Math', 'CS', 'CS',\n",
+       "       'Engineering', 'Physics', 'Engineering', 'Engineering', 'Physics',\n",
+       "       'Physics', 'Physics', 'CS', 'Math', 'CS', 'Math', 'CS', 'Math',\n",
+       "       'CS', 'Physics', 'Engineering', 'CS', 'Math', 'Physics', 'CS',\n",
+       "       'CS', 'Physics', 'CS', 'Engineering', 'CS', 'Engineering',\n",
+       "       'Engineering', 'Physics', 'CS', 'Physics', 'CS', 'CS', 'Math',\n",
+       "       'CS', 'Physics', 'Engineering', 'CS', 'Math', 'Physics', 'CS',\n",
+       "       'Physics', 'Math', 'Math', 'Physics', 'CS', 'Engineering', 'Math',\n",
+       "       'CS', 'CS', 'Engineering', 'Math', 'Math', 'CS', 'CS',\n",
+       "       'Engineering', 'Engineering', 'Math', 'Physics', 'Math', 'CS',\n",
+       "       'Math', 'Physics', 'Engineering', 'Physics', 'Physics', 'Physics',\n",
+       "       'Engineering', 'Physics', 'Physics', 'Physics', 'CS', 'Physics',\n",
+       "       'Engineering', 'Physics', 'Physics', 'Engineering', 'Physics',\n",
+       "       'Engineering', 'Physics', 'Engineering', 'Physics', 'Physics',\n",
+       "       'CS', 'CS', 'Physics', 'Physics', 'Math'], dtype='<U11')"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.seed(42)\n",
+    "student_affiliations=np.random.choice(a=[\"CS\",\"Engineering\",\"Math\",\"Physics\"], size = 1000)\n",
+    "student_affiliations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "660aca67",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -40,7 +231,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -54,7 +245,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
